--- a/index.html
+++ b/index.html
@@ -40,13 +40,17 @@
   <div id="status">Status: Idle</div>
   <audio id="recordedAudio" controls style="display: none;"></audio>
 
-  <div id="transcript"></div>
+  <div id="start_ayat"></div>
+  <div id="end_ayat"></div>
+  <div id="score"></div>
 
   <script>
     const startButton = document.getElementById('startButton');
     const stopButton = document.getElementById('stopButton');
     const status = document.getElementById('status');
-    const transcript = document.getElementById('transcript');
+    const startAyat = document.getElementById('start_ayat');
+    const endAyat = document.getElementById('end_ayat');
+    const score = document.getElementById('score');
     const recordedAudio = document.getElementById('recordedAudio');
     
 
@@ -63,7 +67,9 @@
     const handleStart = () => {
         chunks = [];
         chunkSize = 0;
-        transcript.textContent = '';
+        startAyat.textContent = '';
+        endAyat.textContent = '';
+        score.textContent = '';
         status.textContent = 'Status: Recording...';
         startButton.disabled = true;
         stopButton.disabled = false;
@@ -95,9 +101,14 @@
                   fetch("http://127.0.0.1:5000/transcribe", {
                     method: "POST",
                     body: formData,
+                  })
+                  .then(response => response.json())
+                  .then(result => {
+                      console.log(result);
+                      startAyat.innerHTML = JSON.stringify(result["start"], null, 2);
+                      endAyat.innerHTML = JSON.stringify(result["end"], null, 2);
+                      score.innerHTML = JSON.stringify(result["score"], null, 2);
                   });
-
-
 
                   const audioURL = window.URL.createObjectURL(blob);
                   recordedAudio.src = audioURL;
