--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
     const recordedAudio = document.getElementById('recordedAudio');
     const detected_passage = document.getElementById('detected_passage');
 
+
+    var server_url = "http://127.0.0.1:5000"
+    fetch('http://127.0.0.1:5000/ping-ayat-detect').then((response) => {
+      console.log(response)
+
+      if (response.status === 200) {
+        var server_url = "http://127.0.0.1:5000"
+      } else {
+        var server_url = "http://ec2-3-92-207-212.compute-1.amazonaws.com:5000/"
+      }
+      console.log(`Using server url: ${server_url}`)
+    });
     
 
     let stream;
@@ -73,7 +85,7 @@
                   const formData = new FormData();
                   formData.append("audio_data", blob);
 
-                  fetch("http://127.0.0.1:5000/transcribe", {
+                  fetch(`${server_url}/transcribe`, {
                     method: "POST",
                     body: formData,
                   })
