--- a/index.html
+++ b/index.html
@@ -29,17 +29,22 @@
     const detected_passage = document.getElementById('detected_passage');
 
 
-    var server_url = "http://ec2-3-92-207-212.compute-1.amazonaws.com:5000/"
-    fetch('http://127.0.0.1:5000/ping-ayat-detect').then((response) => {
+    var local_url = "http://ec2-3-92-207-212.compute-1.amazonaws.com:5000"
+    var hosted_url = "http://127.0.0.1:5000"
+
+    var server_url = hosted_url
+    fetch(`${local_url}/ping-ayat-detect`).then((response) => {
       console.log(response)
 
       if (response.status === 200) {
-        var server_url = "http://127.0.0.1:5000"
-      } else {
-        var server_url = "http://ec2-3-92-207-212.compute-1.amazonaws.com:5000/"
-      }
+        var server_url = local_url
+      } 
+      console.log(`Using server url: ${server_url}`)
+    })            
+    .catch((error) => {
       console.log(`Using server url: ${server_url}`)
     });
+;
     
 
     let stream;
