--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
     const detected_passage = document.getElementById('detected_passage');
 
 
-    var local_url = "http://ec2-3-92-207-212.compute-1.amazonaws.com:5000"
-    var hosted_url = "http://127.0.0.1:5000"
+    var hosted_url = "http://ec2-3-92-207-212.compute-1.amazonaws.com:5000"
+    var local_url = "http://127.0.0.1:5000"
 
     var server_url = hosted_url
+
     fetch(`${local_url}/ping-ayat-detect`).then((response) => {
       console.log(response)
 
@@ -44,7 +45,6 @@
     .catch((error) => {
       console.log(`Using server url: ${server_url}`)
     });
-;
     
 
     let stream;
