updates to local

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     const detected_passage = document.getElementById('detected_passage');
 
 
-    var hosted_url = "http://ec2-3-92-207-212.compute-1.amazonaws.com:5000"
+    var hosted_url = "https://ec2-3-92-207-212.compute-1.amazonaws.com"
     var local_url = "http://127.0.0.1:5000"
 
     var server_url = hosted_url
