updated with ayatfinder

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     var hosted_url = "https://ayatfinder.info"
     var local_url = "http://127.0.0.1:5000"
 
-    var server_url = local_url
+    var server_url = hosted_url
 
     fetch(`${local_url}/ping-ayat-detect`).then((response) => {
       console.log(response)
